add picture cabine

--- a/project.json
+++ b/project.json
@@ -137,6 +137,14 @@
                             "github_repository": "myworkshop-humanlab-tools "
                         }
                     }
+                ],
+                "media": [
+                    {
+                        "image": {
+                            "url": "images/cabine2.jpg",
+                            "caption": "Cabine"
+                        }
+                    }
                 ]
             },
             {
