--- a/project.json
+++ b/project.json
@@ -104,7 +104,7 @@
             {
                 "title": "Confection de la cabine du camion",
                 "duration": 14400,
-                "content": "Découper le tissus clair d'ameublement aux dimensions du patron papier en ajoutant 3cm pour faire les ourlets.\n\nFaire une poche en tissus  en fome de carré de 20 cm de côté, et la coudre  à l'emplacement du volant dans laquelle viendra se glisser le support du volant (disque en carton bois).\n\nPrendre d' autre tissus pour fabriquer les éléments ( le phare, poignée, rétroviseur) en les bourrant de ouate . Les coudre aux emplacements prévus sur la cabine\n\nCoudre le ruban pour délimiter les contours de la portière.\n",
+                "content": "Découper le tissus clair d'ameublement aux dimensions du patron papier en ajoutant 3cm pour faire les ourlets.\n\nFaire une poche en tissus  en forme de carré de 20 cm de côté, et la coudre  à l'emplacement du volant dans laquelle viendra se glisser le support du volant (disque en carton bois).\n\nPrendre d' autre tissus pour fabriquer les éléments ( le phare, poignée, rétroviseur) en les bourrant de ouate . Les coudre aux emplacements prévus sur la cabine\n\nCoudre le ruban pour délimiter les contours de la portière.\n",
                 "inputs": [
                     {
                         "component": {
