step conection du fourgon correction

--- a/project.json
+++ b/project.json
@@ -155,20 +155,20 @@
             {
                 "title": "Confection du fourgon",
                 "duration": 300,
-                "content": "Tissus d'ameublement  de couleur foncée 100 cm X 200 cm pour la fabrication du fourgon du camion. \n\nSe référer au patron en papier pour ajuster les mesures.\n\nDécouper assez large les mesures nécessaires dans les tissus afin de garder suffisamment de matière pour coudre les ourlets. \n\nCoudre ensuite le tissus à poil long gris qui figure la route \n\nCoudre à la machine les pictogrammes préalablement confectionnés sur la remorque aux endroits déterminés sur le patron.",
+                "content": "Tissus d'ameublement  de couleur foncée 100 cm X 200 cm pour la fabrication du fourgon du camion. \n\nSe référer au patron en papier pour ajuster les mesures.\n\nDécouper assez large les mesures nécessaires dans les tissus afin de garder suffisamment de matière pour coudre les ourlets. \n\n",
                 "inputs": [
                     {
                         "component": {
-                            "slug": "tissus-ameublement-de-100cm*200cm",
+                            "slug": "tissus-ameublement-de-100cm X 200cm",
                             "quantity": 1
                         }
                     }
                 ]
             },
             {
-                "title": "Confection de la route",
+                "title": "Ajout des éléments de décor (la route) et des pictogrammes figurant chaque étape",
                 "duration": 300,
-                "content": "Bande de scratch fil aiguilles tissu moelleux doux\n\nPositionner le tissus doux figurant la route sur la tenture remorque et fixer avec des aiguilles à tête.\nCoudre la route (tissu doux ) sur la longueur basse. \nCoudre les bandes de scratch sur la  partie haute de la route de manière à ce que le tuyau de leds puisse être retiré pour laver la tenture. Le scratch permet de fixer en serrant le tuyau, afin qu'il ne vrille pas.\n\n",
+                "content": "Positionner le tissus doux figurant la route sur la tenture remorque et fixer avec des aiguilles à tête.\nCoudre la route (tissu doux ) sur la longueur basse. \nCoudre les bandes de scratch sur la  partie haute de la route de manière à ce que le tuyau de leds puisse être retiré pour laver la tenture. Le scratch permet de fixer en serrant le tuyau, afin qu'il ne vrille pas.\n\nCoudre ensuite à la machine les pictogrammes préalablement confectionnés aux endroits déterminés sur le patron.",
                 "media": [
                     {
                         "image": {
